solo archivo index

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 </head>
 <body>
     <article>
-        Hola maestro
-        estoy maestraso
-        borramos algo
-        y ponemos todo
-        chale
+       HOLA ROSI
 
     </article>
 </body>
